# dcaenc

./: .gitignore  Makefile.am  autogen.sh  configure.ac
man/: Makefile.am  dcaenc.1  generate-manpages.sh  libdcaenc.3  libdcaenc.md
src/: Makefile.am  alsaplugin.c  dcaenc.c  main.c  wavfile.c
